<resources>
    <string name="app_name">Showlio</string>
    <string name="no_archive_opened">No archive opened yet.</string>
    <string name="open_archive">Open archive</string>
    <string name="start_slideshow">Start slideshow</string>
    <string name="pause_slideshow">Pause slideshow</string>
    <string name="open_settings">Open settings</string>
    <string name="settings_title">Settings</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="slideshow_interval_setting">Slideshow interval (seconds)</string>
    <string name="slideshow_display_mode_setting">Display order</string>
    <string name="slideshow_display_mode_sequential">Sequential</string>
    <string name="slideshow_display_mode_random">Random</string>
    <string name="slideshow_autoplay_on_load_setting">Autoplay slideshow after archive loads</string>
    <string name="slideshow_image">Slideshow image</string>
    <string name="current_image">Current image</string>
    <string name="slideshow_position">Image %1$d of %2$d</string>
    <string name="slideshow_position_with_file">%1$d/%2$d • %3$s</string>
    <string name="unknown_archive_name">Unknown archive</string>
    <string name="error_no_images">No images were found in this archive.</string>
    <string name="error_unsupported_archive">Unsupported archive format.</string>
    <string name="error_corrupt_archive">Archive appears to be corrupt.</string>
    <string name="error_unsupported_rar">This RAR archive uses an unsupported version (v5) or feature</string>
    <string name="error_storage_permission_required">Storage permission is required to open this file location.</string>
    <string name="error_open_archive">Unable to open archive.</string>
</resources>
